--- a/apps/marketplace/templates/marketplace/marketplace.html
+++ b/apps/marketplace/templates/marketplace/marketplace.html
@@ -1,7 +1,7 @@
 {% extends "base-resp.html" %}:
 
 {% block page_title_prefix %}{% endblock %}
-{% block page_title %}Mozilla Marketplace{% endblock %}
+{% block page_title %}Firefox Marketplace{% endblock %}
 {% block body_id %}marketplace{% endblock %}
 {% block body_class %}sand{% endblock %}
 
@@ -14,25 +14,31 @@
 <section id="main-feature">
 
 <hgroup>
-  <h1><span>Introducing</span> Apps &amp; the Mozilla Marketplace <span class="beta">Beta</span></h1>
-  <h2>The best of the Web on any platform, any device, any operating system.</h2>
+  <h1>Firefox Marketplace <span class="aurora">Aurora</span></h1>
+  <h2>Discover the best of the Web</h2>
 </hgroup>
 
+<div id="marketplace-button">
+  <a href="#" class="button">Visit the Marketplace »</a>
+</div>
+
 <p>Mozilla is bringing its core values — openness, freedom, user choice — to the world of apps. We’re creating an open environment that benefits developers, content owners and consumers. And with HTML5-based apps that work virtually anywhere, we’re helping to close the gap between Web and native apps for the first time.</p>
+
+<p>Visit the Firefox Marketplace and discover the best the Web has to offer. Download apps that you can use on your Android device using Firefox Aurora for mobile.</p>
 
 <aside id="apps-bag">
   <div id="apps-bag-background"></div>
   <div id="apps-container">
     <div id="apps-physics">
-      <div class="apps-icon"></div>
-      <div class="apps-icon"></div>
-      <div class="apps-icon"></div>
-      <div class="apps-icon"></div>
-      <div class="apps-icon"></div>
-      <div class="apps-icon"></div>
-      <div class="apps-icon"></div>
-      <div class="apps-icon"></div>
-      <div class="apps-icon"></div>
+      <div class="apps-icon" id="app-jauntly"></div>
+      <div class="apps-icon" id="app-minimalist"></div>
+      <div class="apps-icon" id="app-pomodoro"></div>
+      <div class="apps-icon" id="app-solitaire"></div>
+      <div class="apps-icon" id="app-soundcloud"></div>
+      <div class="apps-icon" id="app-towerjelly"></div>
+      <div class="apps-icon" id="app-twitter"></div>
+      <div class="apps-icon" id="app-wired"></div>
+      <div class="apps-icon" id="app-wordwars"></div>
     </div>
   </div>
   <div id="apps-bag-handle"></div>
@@ -42,22 +48,105 @@
 </section>
 
 <ul id="apps-list" class="container">
-  <li id="list-discover">Find &amp; discover amazing apps easily</li>
-  <li id="list-html5">Take apps with you wherever you go</li>
-  <li id="list-native">Enjoy the same rich experience as native apps</li>
+  <li id="list-discover"><span>Find &amp; discover amazing apps easily</span></li>
+  <li id="list-feedback"><span>Give us your feedback</span></li>
+  <li id="list-native"><span>Enjoy the same rich experience as native apps</span></li>
 </ul>
 
-<div id="marketplace-link" class="container inset">
-  <a href="#" class="button-blue">Visit the <strong>Mozilla&nbsp;Marketplace&nbsp;»</strong></a>
-</div>
-
-<section id="open">
+<section id="open" class="container">
   <aside id="sign">
     <p>Always open</p>
   </aside>
-  <h3>Mozilla Marketplace: <strong>Always open</strong></h3>
-  <p>Visit the Marketplace and discover the best the Web has to offer. Download apps that you can use on your Mac or Windows machine (Android coming soon).</p>
-  <p>Here are a few of our favorites to get you started, but there are many more to enjoy and explore: Visit the Mozilla Marketplace and discover the best the Web has to offer.</p>
+  <h3>Featured apps</h3>
+  <p>Below are a few of our favorite apps to get you started, but there are many more to enjoy and explore. Use the categories to discover others and click on the images to bring up a QR code to download each app to your Android device. You can also search the complete Marketplace using Firefox Aurora for mobile.</p>
+</section>
+
+<div id="apps-preview" class="pager pager-with-tabs">
+
+  <ul class="pager-tabs">
+    <li><a href="#games">{{_('Games')}}</a></li>
+    <li><a href="#media">{{_('News &amp; Media')}}</a></li>
+    <li><a href="#productivity">{{_('Productivity')}}</a></li>
+  </ul>
+
+  <div class="billboard">
+  <div class="pager-content">
+
+    <div class="pager-page games-content default-page" id="games">
+      <script>// <![CDATA[
+      document.getElementById('games').id = 'page-games';
+      // ]]></script>
+      <section>
+        <ul>
+          <li><a href="#">
+              <img src="{{ media('/img/marketplace/app-thumb-jauntly.png') }}" alt="App thumbnail" />
+              <h4>Jauntly</h4>
+          </a></li>
+          <li><a href="#">
+              <img src="{{ media('/img/marketplace/app-thumb-minimalist.png') }}" alt="App thumbnail" />
+              <h4>Minimalist</h4>
+          </a></li>
+          <li><a href="#">
+              <img src="{{ media('/img/marketplace/app-thumb-pomodoro.png') }}" alt="App thumbnail" />
+              <h4>Pomodoro</h4>
+          </a></li>
+          <li><a href="#">
+              <img src="{{ media('/img/marketplace/app-thumb-solitaire.png') }}" alt="App thumbnail" />
+              <h4>Solitaire</h4>
+          </a></li>
+          <li><a href="#">
+              <img src="{{ media('/img/marketplace/app-thumb-soundcloud.png') }}" alt="App thumbnail" />
+              <h4>SoundCloud</h4>
+          </a></li>
+          <li><a href="#">
+              <img src="{{ media('/img/marketplace/app-thumb-towerjelly.png') }}" alt="App thumbnail" />
+              <h4>Tower Jelly</h4>
+          </a></li>
+          <li><a href="#">
+              <img src="{{ media('/img/marketplace/app-thumb-twitter.png') }}" alt="App thumbnail" />
+              <h4>Twitter</h4>
+          </a></li>
+          <li><a href="#">
+              <img src="{{ media('/img/marketplace/app-thumb-wired.png') }}" alt="App thumbnail" />
+              <h4>Wired</h4>
+          </a></li>
+          <li><a href="#">
+              <img src="{{ media('/img/marketplace/app-thumb-wordwars.png') }}" alt="App thumbnail" />
+              <h4>Word Wars</h4>
+          </a></li>
+        </ul>
+      </section>
+    </div>
+
+    <div class="pager-page news-content" id="news">
+      <script>// <![CDATA[
+      document.getElementById('news').id = 'page-news';
+      // ]]></script>
+      <section>
+      news...
+      </section>
+    </div>
+
+    <div class="pager-page productivity-content" id="productivity">
+      <script>// <![CDATA[
+      document.getElementById('productivity').id = 'page-productivity';
+      // ]]></script>
+      <section>
+      productivity...
+      </section>
+    </div>
+
+  </div>
+  </div>
+</div>
+
+<section id="build" class="container">
+  <h3>Want to build an app?</h3>
+  <p>Cras nec lacus nec turpis viverra vestibulum. Quisque a mi neque. Etiam accumsan nunc libero, vel pharetra dui. Praesent porttitor egestas lectus ac mollis:</p>
+  <ul class="unstyled">
+    <li><a href="">Partner with Mozilla »</a></li>
+    <li><a href="">Develop HTML5 Web apps for an open marketplace »</a></li>
+  </ul>
 </section>
 
 
