--- a/media/css/marketplace.less
+++ b/media/css/marketplace.less
@@ -354,7 +354,7 @@
                 width: 100%;
                 height: auto;
                 display: block;
-                    .transition(all ease-out 0.25s);
+                .transition(all ease-out 0.25s);
             }
             img.qr-code {
                 width: 50%;
@@ -366,13 +366,13 @@
             }
             h4 {
                 font-size: 18px;
-                margin: 5px 0;
+                margin: 5px 0 10px 0;
             }
             &:hover,
             &:focus {
                 img {
                     top: 15px;
-                .transition(all ease-in 0.5s);
+                    .transition(all ease-in 0.5s);
                 }
                 img.qr-code {
                     opacity: 1;
@@ -605,3 +605,119 @@
     }
 }
 
+/* Mobile layout: 320px */
+@media only screen and (max-width: @breakTablet) {
+
+    #apps-bag {
+        display: none;
+    }
+
+    #main-feature {
+        p,
+        hgroup {
+            width: auto;
+            float: none;
+        }
+        hgroup {
+            padding-top: 20px;
+            h1 {
+                font-size: 48px;
+                margin-bottom: @baseLine;
+            }
+            h2 {
+                font-size: 22px;
+            }
+        }
+        #marketplace-launcher {
+            width: auto;
+            #marketplace-button {
+                font-size: 18px;
+                width: auto;
+                min-width: 0;
+                padding-left: 70px;
+            }
+        }
+    }
+
+    #open {
+        #sign {
+            display: none;
+        }
+        h3,
+        p {
+            width: auto;
+            float: none;
+        }
+        h3 { font-size: 32px; }
+    }
+
+    #apps-preview {
+        .pager-page {
+            li {
+                .span_narrow(5);
+            }
+        }
+    }
+
+    #build {
+        h3 {
+            font-size: 32px;
+        }
+    }
+
+    #apps-preview {
+
+        .pager-tabs {
+            li {
+                .inline-block;
+                position: static;
+                width: auto;
+                a {
+                    line-height: 1;
+                    height: auto;
+                    background: #f8f8f8;
+                    border-style: solid;
+                    border-width: 1px 1px 0 1px;
+                    border-color: #dadada;
+                    padding: 12px;
+                    border-top-left-radius: 12px;
+                    border-top-right-radius: 12px;
+                    &.selected {
+                        background: #fff;
+                        border-color: #fff;
+                    }
+                }
+            }
+        }
+    }
+
+}
+
+@media only screen and (max-width: @breakMobileLandscape) {
+
+    #main-feature {
+        hgroup {
+            h1 {
+                span.aurora {
+                    position: absolute;
+                    top: 0;
+                    right: 0;
+                }
+            }
+        }
+    }
+
+}
+
+/* Wide Mobile Layout: 480px */
+@media only screen and (min-width: @breakMobileLandscape) and (max-width: @breakTablet) {
+
+    #apps-preview {
+        .pager-page {
+            li {
+                .offset_narrow(1);
+            }
+        }
+    }
+
+}
