Marketplace links and wording tweaks (Bug 745033)

--- a/apps/marketplace/templates/marketplace/marketplace.html
+++ b/apps/marketplace/templates/marketplace/marketplace.html
@@ -15,11 +15,11 @@
 
 <hgroup>
   <h1>Firefox Marketplace <span class="aurora">Aurora</span></h1>
-  <h2>Open for Business</h2>
+  <h2>Open for business</h2>
 </hgroup>
 
 <div id="marketplace-launcher">
-  <a href="#" class="button" id="marketplace-button" data-href="https://marketplace.mozilla.org/">Try the Marketplace »</a>
+  <a class="button" id="marketplace-button" href="https://marketplace.mozilla.org/">Try the Marketplace »</a>
   <div id="marketplace-panel">
     <div id="panel-download">
       <p>To test out the Firefox Marketplace Aurora release for your Android device, you first need to download Firefox Aurora for Android.</p>
@@ -31,9 +31,9 @@
   </div>
 </div>
 
-<p>Mozilla is bringing its core values — openness, freedom, user choice — to the world of apps. We’re creating an open environment that benefits developers, content owners and consumers. And with apps based on open web technologies like HTML5 JavaScript and CSS, developers can build rich and immersive experiences.</p>
+<p>Mozilla is bringing its core values — openness, freedom, user choice — to the world of apps. We’re creating an open environment that benefits developers, content owners and consumers. And with apps based on open Web technologies like HTML5, JavaScript and CSS, developers can build rich and immersive experiences.</p>
 
-<p>The first Aurora release of Firefox Marketplace is available with Firefox for Android Aurora, giving developers a means to get feedback on their apps as the Marketplace grows and progresses.</p>
+<p>The first Aurora release of Firefox Marketplace is available on Firefox Aurora for Android, giving developers a means to get feedback on their apps as the Marketplace grows and progresses.</p>
 
 <aside id="apps-bag">
   <div id="apps-bag-background"></div>
@@ -64,8 +64,8 @@
 
 <section id="showcased" class="container">
   <h3>Showcased apps</h3>
-  <p id="showcased-nonfx">Below are a few of our favorite apps to get you started, but there are more to enjoy and explore. Once you have downloaded <a href="{{ php_url('/mobile/aurora/') }}">Firefox for Android Aurora</a>, hover over an app to reveal a QR code which you can scan to download the app, or search for the App on the Marketplace.</p>
-  <p id="showcased-fx">Below are a few of our favorite apps to get you started, and there are more to enjoy and explore.</p>
+  <p id="showcased-nonfx">Below are a few of our favorite apps to get you started, but there are more to enjoy and explore. Once you've downloaded <a href="{{ php_url('/mobile/aurora/') }}">Firefox for Android Aurora</a>, you can hover over any of these apps to reveal a QR code that you can scan to download it. You can also search for apps directly on the Marketplace.</p>
+  <p id="showcased-fx">Below are a few of our favorite apps to get you started. There are also more to enjoy and explore directly on the Marketplace.</p>
 </section>
 
 <div id="apps-preview" class="pager pager-with-tabs">
@@ -85,17 +85,17 @@
       // ]]></script>
       <section>
         <ul>
-          <li><a href="#" data-href="https://marketplace.mozilla.org/app/pasjanssolitaire/">
+          <li><a href="https://marketplace.mozilla.org/app/pasjanssolitaire/">
               <img src="{{ media('/img/marketplace/app-thumb-solitaire.png') }}" alt="App thumbnail" />
               <img src="{{ media('/img/marketplace/qr-solitaire.png') }}" alt="qr code" class="qr-code" />
               <h4>Solitaire</h4>
           </a></li>
-          <li><a href="#" data-href="">
+          <li><a href="https://marketplace.mozilla.org/app/towerjelly/">
               <img src="{{ media('/img/marketplace/app-thumb-blank.png') }}" alt="App thumbnail" />
               <img src="{{ media('/img/marketplace/qr-towerjelly.png') }}" alt="qr code" class="qr-code" />
               <h4>Tower Jelly</h4>
           </a></li>
-          <li><a href="#" data-href="">
+          <li><a href="https://marketplace.mozilla.org/app/word-wars/">
               <img src="{{ media('/img/marketplace/app-thumb-wordwars.png') }}" alt="App thumbnail" />
               <img src="{{ media('/img/marketplace/qr-wordwars.png') }}" alt="qr code" class="qr-code" />
               <h4>Word Wars</h4>
@@ -110,17 +110,17 @@
       // ]]></script>
       <section>
         <ul>
-          <li><a href="#" data-href="">
+          <li><a href="https://marketplace.mozilla.org/app/soundcloud/">
               <img src="{{ media('/img/marketplace/app-thumb-soundcloud.png') }}" alt="App thumbnail" />
               <img src="{{ media('/img/marketplace/qr-soundcloud.png') }}" alt="qr code" class="qr-code" />
               <h4>SoundCloud</h4>
           </a></li>
-          <li><a href="#" data-href="">
+          <li><a href="https://marketplace.mozilla.org/app/twitter/">
               <img src="{{ media('/img/marketplace/app-thumb-twitter.png') }}" alt="App thumbnail" />
               <img src="{{ media('/img/marketplace/qr-twitter.png') }}" alt="qr code" class="qr-code" />
               <h4>Twitter</h4>
           </a></li>
-          <li><a href="#" data-href="">
+          <li><a href="https://marketplace.mozilla.org/app/wired/">
               <img src="{{ media('/img/marketplace/app-thumb-blank.png') }}" alt="App thumbnail" />
               <img src="{{ media('/img/marketplace/qr-wired.png') }}" alt="qr code" class="qr-code" />
               <h4>Wired</h4>
@@ -135,17 +135,17 @@
       // ]]></script>
       <section>
         <ul>
-          <li><a href="#" data-href="">
+          <li><a href="https://marketplace.mozilla.org/app/jauntly/">
               <img src="{{ media('/img/marketplace/app-thumb-jauntly.png') }}" alt="App thumbnail" />
               <img src="{{ media('/img/marketplace/qr-jauntly.png') }}" alt="qr code" class="qr-code" />
               <h4>Jauntly</h4>
           </a></li>
-          <li><a href="#" data-href="">
+          <li><a href="https://marketplace.mozilla.org/app/minimalist/">
               <img src="{{ media('/img/marketplace/app-thumb-minimalist.png') }}" alt="App thumbnail" />
               <img src="{{ media('/img/marketplace/qr-minimalist.png') }}" alt="qr code" class="qr-code" />
               <h4>Minimalist</h4>
           </a></li>
-          <li><a href="#" data-href="">
+          <li><a href="https://marketplace.mozilla.org/app/the-pomodoro-technique-time/">
               <img src="{{ media('/img/marketplace/app-thumb-pomodoro.png') }}" alt="App thumbnail" />
               <img src="{{ media('/img/marketplace/qr-pomodoro.png') }}" alt="qr code" class="qr-code" />
               <h4>Pomodoro</h4>
