Make app links on desktop not go to marketplace. Make marketplace button toggle panel instead of going to marketplace on desktop. Add Firefox 18+ Android detection. Refs Bug #745033.

--- a/apps/marketplace/templates/marketplace/marketplace.html
+++ b/apps/marketplace/templates/marketplace/marketplace.html
@@ -19,7 +19,7 @@
 </hgroup>
 
 <div id="marketplace-launcher">
-  <a class="button" id="marketplace-button" href="https://marketplace.mozilla.org/">Try the Marketplace »</a>
+  <a class="button" id="marketplace-button" href="https://marketplace.mozilla.org/" data-mobile-title="Visit the Marketplace »">Try the Marketplace »</a>
   <div id="marketplace-panel">
     <div id="panel-download">
       <p>To test out the Firefox Marketplace Aurora release for your Android device, you first need to download Firefox Aurora for Android.</p>
